k8s/istio/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: service-mesh
  labels:
    istio-injection: enabled
